--- a/assets/css/board.css
+++ b/assets/css/board.css
@@ -81,30 +81,32 @@
   color: var(--danger-color);
 } */
 
-.mobileAddTaskButton, .mobileAddTaskButtonSmall {
+.mobileAddTaskButton,
+.mobileAddTaskButtonSmall,
+.mobileAddTaskButton {
   display: none;
 }
 .desktopAddTaskButton {
   display: inline-block;
 }
 
-.container-header-card{
+.container-header-card {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.dragDrop-menu-mobile{
+.dragDrop-menu-mobile {
   display: none;
 }
 
-.menu-mobile-task-container{
+.menu-mobile-task-container {
   position: absolute;
   background-color: var(--main-color);
   color: var(--white);
   padding: 12px;
   width: 120px;
-  top:0;
+  top: 0;
   right: 0;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
@@ -114,7 +116,7 @@
   gap: 8px;
 }
 
-.cancel-button-dragDrop{
+.cancel-button-dragDrop {
   height: 24px !important;
   width: auto !important;
   aspect-ratio: 1/1;
@@ -126,23 +128,25 @@
 @media (max-width: 900px) {
   .sub-container {
     padding-bottom: 100px;
-
   }
+
+  .button.mobileAddTaskButton {
+    display: none !important;
+  }
+
   .mobileAddTaskButton {
     display: inline-block;
   }
-  .desktopAddTaskButton:not(svg){
+
+  .desktopAddTaskButton {
     display: none;
   }
 
-  .mobileAddTaskButton {
-    display: none;
+  .mobileAddTaskButtonSmall {
+    display: flex;
   }
-
-  .mobileAddTaskButtonSmall {display: flex;}
 
   .boardMobileHeader {
-
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -153,13 +157,14 @@
   .mobileAddTaskButtonSmall {
     height: 40px;
     width: 40px;
-
   }
-  .boardHeader .searchContainer,#searchTask, .searchBox {
-    width:100%;
+  .boardHeader .searchContainer,
+  #searchTask,
+  .searchBox {
+    width: 100%;
   }
 
-  .dragDrop-menu-mobile{
+  .dragDrop-menu-mobile {
     display: inline-block;
     background-color: var(--main-color);
     border-radius: 100%;
@@ -172,20 +177,20 @@
     position: relative;
   }
 
-  .dragDrop-menu-mobile p{
+  .dragDrop-menu-mobile p {
     padding: 4px 8px 4px 4px;
     margin: 0 24px 0 0;
   }
 
-  .dragDrop-menu-mobile:hover{
+  .dragDrop-menu-mobile:hover {
     background-color: var(--menu-hover);
   }
 
-  .dragDrop-menu-mobile p:hover{
+  .dragDrop-menu-mobile p:hover {
     background-color: var(--menu-hover);
   }
 
-  .dragDrop-menu-mobile img{
+  .dragDrop-menu-mobile img {
     height: 90%;
     width: 90%;
   }
